Adding Games APIs: getGames,getGameById,addGame
